--- a/Frontend/front/src/Components/Css/responsive-player.css
+++ b/Frontend/front/src/Components/Css/responsive-player.css
@@ -22,8 +22,8 @@ a:hover {
     display: grid;
     grid-row: 1fr 1fr;
     grid-column: 1fr 1fr;
-    margin: 20px 0;
-    padding-bottom: 20px;
+    /* margin: 20px 0; */
+    /* padding-bottom: 20px; */
     background-color: rgb(231, 231, 231);
     /* border: solid black; */
     width: 100vw;
@@ -34,7 +34,7 @@ a:hover {
     grid-area: 1 / 1 / 2 / 2;
     position: relative;
     padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */ 
-  
+    margin-bottom: 0 !important; 
     min-width: 60vw;
     
 }
@@ -43,7 +43,7 @@ a:hover {
 position: absolute;
 top: 0;
 left: 0;
-padding: 30px;
+padding:  30px 30px 0 30px;
 }
 
 .playlist-area{
@@ -55,7 +55,7 @@ padding: 30px;
 }
 
 .playlist-videos-container{
-   
+    margin-top: 0 !important;
     margin: 30px;
     overflow: auto;
     width: 450px;
@@ -77,7 +77,8 @@ margin: 0 30px;
 }
 
 .playlist-info {
-   margin: 30px;
+   margin-left: 30px;
+   margin-right: 30px;
     width: 30rem;
     height: 7rem;
     display: flex;
@@ -85,11 +86,12 @@ margin: 0 30px;
     align-items: baseline;
     background-color: white;
     margin-top: 30px;
+    margin-bottom: 0 !important;
     
    
 }
 
-.Avatar{
+.avatar{
    
     width: 150px;
     grid-area: avatar;
